Add new widget converters

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jay
-description: A new Flutter package project.
+description: A simple Flutter server driven UI generator.
 version: 0.0.1+1
 homepage: https://github.com/ailtonvivaz/flutter_jay
 
